force-app/main/default/objects/Contact_Address_field__c/Contact_Address_field__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Contact Address field</label>
</CustomObject>