force-app/main/default/objects/Contact_Address_field__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing_City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>