force-app/main/default/objects/Contact_Address_field__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <label>Mailing_Country</label>
    <length>200</length>
    <type>Text</type>
</CustomField>