force-app/main/default/objects/Contact_Address_field__c/fields/Mailing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Province__c</fullName>
    <label>Mailing_State_Province</label>
    <length>200</length>
    <type>Text</type>
</CustomField>