force-app/main/default/objects/Contact_Address_field__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>Mailing_Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>