force-app/main/default/objects/Contact_Address_field__c/fields/Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Postal_Code__c</fullName>
    <label>Mailing_Zip_Postal_Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>